[package]
name = "mkdir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
fs_extra = "1.3.0"
glob = "0.3.1"
globwalk = "0.9.1"
path-absolutize = "3.1.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
jwalk = "0.8.1"
clap = { version = "4.3.4", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"